values/stage/clabgate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clabgate
spec:
  selector:
    app: clabgate
  ports:
    - name: http
      targetPort: http
      port: 80
