values/stage/core-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-backend
spec:
  selector:
    app: core-backend
  ports:
    - name: http
      targetPort: http
      port: 80
