values/stage/core-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-backend
spec:
  replicas: 1
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: core-backend
  template:
    metadata:
      labels:
        app: core-backend
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/a10869/api-modules/backend/stage:${VERSION}
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "50Mi"
              cpu: "30m"
            limits:
              memory: "100Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /api/docs/index.html
              port: http
            periodSeconds: 10
            initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: core-backend
spec:
  selector:
    app: core-backend
  ports:
    - name: http
      targetPort: http
      port: 80
