values/stage/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - name: http
      targetPort: http
      port: 80
